# CAL-PROJ

./: .gitignore  CMakeLists.txt  main.cpp
MeetupRider/: CMakeLists.txt  CMakeSettings.json  main.cpp
MeetupRider/ex2/: MyInterface.js  MyObject.js  MyParallelogram.js  MyScene.js  MyTangram.js  MyTriangleBig.js  MyTriangleSmall.js  MyUnitCube.js  main.js
MeetupRider/resources/FloydWarshall/: FloydWarshall.txt  GridGraphDistanceFW.txt  GridGraphPathFW.txt
MeetupRider/resources/fileBackup/: 8x8Requests.txt  Drivers.txt  Passengers.txt  maiaRequests.txt  portoRequests.txt
MeetupRider/resources/files/: Base.txt  Drivers.txt  Journeys.txt  Passengers.txt  Requests.txt  fafeRequests.txt  maiaRequests.txt  portoRequests.txt
MeetupRider/resources/maps/: Vértices-conexos.txt
MeetupRider/resources/maps/example/: edges.txt  nodes.txt
MeetupRider/src/: Base.cpp  Base.h  FloydWarshall.cpp  FloydWarshall.h  Journey.cpp  Journey.h  MutablePriorityQueue.h  NewGraph.cpp  NewGraph.h  Person.cpp  Person.h  Request.cpp  Request.h  Time.cpp  Time.h  Vehicle.cpp  Vehicle.h  graphDrawing.cpp  graphDrawing.h  graphviewer.cpp  menus.cpp  menus.h  resultGenerator.cpp  resultGenerator.h  utils.cpp  utils.h
src/: Graph.h  Journey.cpp  Journey.h  MutablePriorityQueue.h  Person.cpp  Person.h  Request.cpp  Vehicle.cpp  utils.h
